<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true"
        tools:background="@color/blue_whale_alpha_50"
        tools:context=".screen.main.MainActivity">

    <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            style="@style/Widget.Surveys.Toolbar"
            app:navigationIcon="@drawable/ic_refresh_white_24dp"
            app:navigationContentDescription="@string/activity_main_nav_btn_description"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

        <TextView
                style="@style/TextAppearance.Surveys.Toolbar.Title"
                android:id="@+id/text_view_toolbar_title"
                android:text="@string/activity_main_title"/>

    </androidx.appcompat.widget.Toolbar>

    <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/view_pager"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/toolbar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    <com.google.android.material.button.MaterialButton
            android:id="@+id/button_survey"
            style="@style/Widget.Surveys.Button"
            android:layout_marginBottom="32dp"
            android:text="@string/activity_main_btn_survey"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:visibility="visible"/>

    <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:padding="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar"
            app:layout_constraintBottom_toBottomOf="parent">

        <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view_indicator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                tools:listitem="@layout/item_indicator"/>

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>