<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="center">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:textColor="@color/blue_whale_alpha_50"
            android:text="@string/item_error_tv_message"
            android:drawableTop="@drawable/ic_dissatisfied_black_24dp"/>

    <com.google.android.material.button.MaterialButton
            android:id="@+id/button_retry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:textAllCaps="false"
            android:text="@string/item_error_btn_retry"
            app:cornerRadius="24dp"/>

</LinearLayout>